--- a/tmux.conf
+++ b/tmux.conf
@@ -2,7 +2,6 @@
 
 # unbind C-b
 
-unbind r
 bind r source-file ~/.tmux.conf
 
 setw -g mode-keys vi
@@ -43,3 +42,24 @@ set -g status-fg black
 set -g status-left '#[fg=black][#S]'
 set-window-option -g window-status-current-bg colour3
 set-window-option -g window-status-current-fg black
+
+bind-key -t vi-copy 'v' begin-selection
+bind -t vi-copy y copy-pipe "pbcopy"
+
+# List of plugins
+# Supports `github_username/repo` or full git repo URLs
+set -g @tpm_plugins '              \
+  tmux-plugins/tpm                 \
+  tmux-plugins/tmux-copycat        \
+  tmux-plugins/tmux-resurrect      \
+'
+# Other examples:
+# github_username/plugin_name    \
+# git@github.com/user/plugin     \
+# git@bitbucket.com/user/plugin  \
+
+set -g @resurrect-processes 'tail "~rails server" "~rails console" "~rake jasmine"'
+
+# Initializes TMUX plugin manager.
+# Keep this line at the very bottom of tmux.conf.
+run-shell '~/.tmux/plugins/tpm/tpm'
