Updated public profile

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,8 @@
 # set -g prefix C-l
 
 # unbind C-b
+#
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 bind r source-file ~/.tmux.conf
 
@@ -20,6 +22,8 @@ set -g base-index 1
 setw -g aggressive-resize on
 
 set -g detach-on-destroy off
+
+set-option -g history-limit 40000
 
 # open a man page in new window
 bind m command-prompt "split-window -h 'exec man %%'"
@@ -58,7 +62,7 @@ set -g @tpm_plugins '              \
 # git@github.com/user/plugin     \
 # git@bitbucket.com/user/plugin  \
 
-set -g @resurrect-processes 'tail "~rails server" "~rails console" "~rake jasmine"'
+set -g @resurrect-processes 'tail "~rails server" "~rails console" "~rake jasmine" "rs" "rc"'
 
 # Initializes TMUX plugin manager.
 # Keep this line at the very bottom of tmux.conf.
