--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,8 @@
-# set -g prefix C-l
+set -g prefix C-e
 
 # unbind C-b
 #
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+# set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 bind r source-file ~/.tmux.conf
 
@@ -44,11 +44,6 @@ bind l split-window -l 120 -h 'tail -100f log/development.log'
 set -g status-bg green
 set -g status-fg black
 set -g status-left '#[fg=black][#S]'
-set-window-option -g window-status-current-bg colour3
-set-window-option -g window-status-current-fg black
-
-bind-key -t vi-copy 'v' begin-selection
-bind -t vi-copy y copy-pipe "pbcopy"
 
 # List of plugins
 # Supports `github_username/repo` or full git repo URLs
