Updated tmux, fixed clip_copy

--- a/tmux.conf
+++ b/tmux.conf
@@ -51,7 +51,12 @@ set -g @tpm_plugins '              \
   tmux-plugins/tpm                 \
   tmux-plugins/tmux-copycat        \
   tmux-plugins/tmux-resurrect      \
+  fcsonline/tmux-thumbs            \
 '
+
+set -g @thumbs-command 'echo -n {} | clip_copy'
+# set -g @thumbs-key F
+
 # Other examples:
 # github_username/plugin_name    \
 # git@github.com/user/plugin     \
