Updated tmux conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -55,7 +55,8 @@ set -g @tpm_plugins '              \
 '
 
 set -g @thumbs-command 'echo -n {} | clip_copy'
-# set -g @thumbs-key F
+unbind f
+set -g @thumbs-key f
 
 # Other examples:
 # github_username/plugin_name    \
