--- a/tmux.conf
+++ b/tmux.conf
@@ -45,6 +45,8 @@ set -g status-bg green
 set -g status-fg black
 set -g status-left '#[fg=black][#S]'
 
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'clip_copy'
+
 # List of plugins
 # Supports `github_username/repo` or full git repo URLs
 set -g @tpm_plugins '              \
@@ -54,7 +56,9 @@ set -g @tpm_plugins '              \
   fcsonline/tmux-thumbs            \
 '
 
-set -g @thumbs-command 'echo -n {} | clip_copy'
+run-shell "zsh ~/.tmux_os_settings.sh"
+# set -g @thumbs-command 'echo {} | clip_copy'
+set -g @thumbs-reverse
 unbind f
 set -g @thumbs-key f
 
