--- a/tmux.conf
+++ b/tmux.conf
@@ -56,11 +56,12 @@ set -g @tpm_plugins '              \
   fcsonline/tmux-thumbs            \
 '
 
-run-shell "zsh ~/.tmux_os_settings.sh"
 # set -g @thumbs-command 'echo {} | clip_copy'
-set -g @thumbs-reverse
+# set -g @thumbs-reverse
 unbind f
 set -g @thumbs-key f
+
+run-shell "zsh ~/.tmux_os_settings.sh"
 
 # Other examples:
 # github_username/plugin_name    \
