--- a/tmux.conf
+++ b/tmux.conf
@@ -45,6 +45,7 @@ set -g status-bg green
 set -g status-fg black
 set -g status-left '#[fg=black][#S]'
 
+bind -T copy-mode-vi 'v' send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'clip_copy'
 
 # List of plugins
@@ -58,8 +59,8 @@ set -g @tpm_plugins '              \
 
 # set -g @thumbs-command 'echo {} | clip_copy'
 # set -g @thumbs-reverse
-unbind f
-set -g @thumbs-key f
+unbind s
+set -g @thumbs-key s
 
 run-shell "zsh ~/.tmux_os_settings.sh"
 
@@ -73,3 +74,5 @@ set -g @resurrect-processes 'tail "~rails server" "~rails console" "~rake jasmin
 # Initializes TMUX plugin manager.
 # Keep this line at the very bottom of tmux.conf.
 run-shell '~/.tmux/plugins/tpm/tpm'
+run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
+
