--- a/tmux.conf
+++ b/tmux.conf
@@ -7,10 +7,6 @@ set -g prefix C-e
 bind r source-file ~/.tmux.conf
 
 setw -g mode-keys vi
-bind H select-pane -L
-bind J select-pane -D
-bind K select-pane -U
-bind L select-pane -R
 
 # set escape time to 0
 set -s escape-time 0
@@ -28,25 +24,20 @@ set-option -g history-limit 40000
 # open a man page in new window
 bind m command-prompt "split-window -h 'exec man %%'"
 
-# open a man page in new window
-#bind C new-window; split-window -h
-
-# open alsamixer
-bind v split-window -h 'alsamixer'
-
-# open htop
-bind h split-window -v 'htop'
-
-# open tail -f log/development.log
-bind l split-window -l 120 -h 'tail -100f log/development.log'
-
 # Set status bar
 set -g status-bg green
 set -g status-fg black
 set -g status-left '#[fg=black][#S]'
 
 bind -T copy-mode-vi 'v' send -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'clip_copy'
+if-shell 'test "$(uname)" = "Linux"' {
+  bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -selection clipboard"
+}
+if-shell 'test "$(uname)" = "OSX"' {
+  bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+}
+bind t copy-mode \; send -X search-backward 'bin/rails test .*:[0-9]+'
+bind l copy-mode \; send -X search-backward '(method=|started )(get|patch|post|delete)'
 
 # List of plugins
 # Supports `github_username/repo` or full git repo URLs
